<resources>
    <string name="app_name">Escribe, Lee, ¡Exprésate!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>







    <string name="str_title">Tus Relatos Escribe, Lee, ¡Exprésate!</string>
    <string name="str_iniciar">Iniciar Sesión</string>
    <string name="btn_iniciar">INICIAR SESIÓN</string>
    <string name="str_registrar">Registrate</string>
    <string name="str_aceptar">Aceptar</string>
    <string name="str_yatienecuenta">Ya tienes Cuenta!</string>
    <string name="str_notienecuenta">No tiene Cuenta?</string>
    <string name="str_nothavecount">Crear una cuenta</string>
    <string name="str_coprytn">Todos los derechos reservados-2023 ©</string>

    <!--    drawel menu-->
    <string name="m_opciones">Menu de Opciones</string>
    <string name="agg_relato">Publicar un Relato</string>
    <string name="edit_relato">Editar Relato</string>
    <string name="delet_relato">Eliminar Relato</string>
    <string name="tus_publicaciones_relato">Ver Publicaciones Realizadas</string>
    <string name="milocation">Mi Localización</string>

    <string name="camera">Tomar Foto</string>
    <!--    drawel header-->


    <!--    string desde el nav-->
    <string name="nav_edit">Editar Perfil</string>
    <string name="nav_salir">Cerrar Sesión</string>
    <string name="nav_Config">Configuracion</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--    activity registro-->
    <string name="cancel">Cancelar</string>

    <string name="error_password_mismatch">Las contraseñas no coinciden</string>
    <!--    main_framgment-->
    <string name="cde">Codigo</string>
    <string name="nombre_publicacion">Nombre Publicacion</string>
    <string name="cantidadede_caracteres">cc</string>
    <string name="fecha_publicacion">Fecha Publicacion</string>
    <string name="str">Publicar un relato</string>
    <string name="publicar">Publicar</string>
    <string name="user">Usuario</string>
    <string name="like">Like</string>
    <string name="comentario">comentario</string>

    <string name="error_correo_login">Correo Incorrecto</string>
    <string name="error_pass_login">Contraseña Incorrecto</string>
</resources>