<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00A1FE"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="420dp"
        android:layout_height="695dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:srcCompat="@drawable/img_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="509dp"
            android:background="#E1E3E5"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="364dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alpha="0.8"
                android:background="#E1E3E5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/one"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="206dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <EditText
                                    android:id="@+id/txtcodigoE"
                                    android:layout_width="218dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ems="10"
                                    android:hint="@string/cde"
                                    android:inputType="number" />
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <Space
                            android:layout_width="68dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/btnbuscar"
                            android:layout_width="100dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:layout_margin="20dp"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/zoom"
                            android:hapticFeedbackEnabled="true"
                            app:icon="@drawable/zoom"
                            app:iconGravity="textTop"
                            app:iconSize="42dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/txtnombrepublicacionE"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/nombre_publicacion"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="147dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="143dp">

                            <EditText
                                android:id="@+id/txtcomentarioedit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/comentario"
                                android:inputType="text|textLongMessage|textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/txtfechapublicacione"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/fecha_publicacion"
                                android:inputType="datetime" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btndeletE"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="@string/delet_relato"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/bntactualizarE"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="#00A0FD"
                                android:text="Actualizar"
                                android:textColor="@color/white"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btncancelE"
                            android:layout_width="138dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/design_default_color_error"
                            android:text="@string/cancel" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>