<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00A1FE"
    tools:context=".ui.slideshow.SlideshowFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="418dp"
        android:layout_height="628dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                app:srcCompat="@drawable/img_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E1E3E5"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="354dp"
                android:layout_height="426dp"
                android:layout_gravity="center|right"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:background="#E1E3E5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="74dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/codigoP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Codigo"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/nombreP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nombre_publicacion"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="127dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/comentarioP"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/comentario"
                                android:inputType="text|textLongMessage|textAutoComplete|textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fechaP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/fecha_publicacion"
                                android:inputType="datetime" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="101dp"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btndeletE"
                                android:layout_width="127dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:fontFamily="casual"
                                android:text="@string/cancel"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <Space
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <Button
                                android:id="@+id/bntactualizarE"
                                android:layout_width="129dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="#00A0FD"
                                android:fontFamily="casual"
                                android:text="@string/publicar"
                                android:textColor="@color/white"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>