<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dynamic_neutral_90"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="419dp"
        android:layout_height="676dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="332dp"
            android:layout_height="84dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005">

            <Button
                android:id="@+id/btnsesion"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bluee_principal"
                android:fontFamily="serif-monospace"
                android:text="@string/btn_iniciar"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Space
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bntregis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bluee_principal"
                android:fontFamily="serif-monospace"
                android:text="@string/str_registrar"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="419dp"
            android:layout_height="442dp"
            android:background="#3F51B4"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.371">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="370dp"
                android:layout_height="432dp"
                android:layout_gravity="center"
                android:background="#3F51B5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="322dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="84dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textuser"
                                    android:layout_width="197dp"
                                    android:layout_height="34dp"
                                    android:fontFamily="casual"
                                    android:paddingLeft="10dp"
                                    android:text="@string/user"
                                    android:textColor="@color/white"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/homefecha"
                                    android:layout_width="wrap_content"
                                    android:layout_height="36dp"
                                    android:layout_weight="1"
                                    android:fontFamily="casual"
                                    android:textColor="@color/black"
                                    android:textSize="15dp" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/textnombrerelato"
                                android:layout_width="match_parent"
                                android:layout_height="32dp"
                                android:fontFamily="casual"
                                android:paddingLeft="10dp"
                                android:text="Nombel del Relato"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="323dp"
                            android:layout_height="156dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/border_radius"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textcomentario"
                                android:layout_width="306dp"
                                android:layout_height="143dp"
                                android:layout_margin="5dp"
                                android:fontFamily="casual"
                                android:text="Relato del comentario"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:fontFamily="casual"
                            android:text="45/100" />

                        <TextView
                            android:id="@+id/textfechaactual"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:fontFamily="casual"
                            android:paddingLeft="10dp"
                            android:text="@string/fecha_publicacion" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="39dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="casual"
                            android:text="Reacciones"
                            android:textColor="@color/dynamic_neutral_90"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/dynamic_neutral_90"
                            android:textStyle="bold"
                            tools:text="120" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="casual"
                            android:text="@string/comentario"
                            android:textColor="@color/dynamic_neutral_90"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="50"
                            android:textColor="@color/dynamic_neutral_90"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/button7"
                                android:layout_width="137dp"
                                android:layout_height="34dp"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/dynamic_neutral_90"
                                android:drawableStart="@drawable/like"
                                android:fontFamily="casual"
                                android:text="@string/like"
                                android:textColor="@color/dymanic_neutral_10"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="336dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/button6"
                                android:layout_width="143dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/dynamic_neutral_90"
                                android:drawableEnd="@drawable/comentario"
                                android:fontFamily="casual"
                                android:text="Comentar"
                                android:textColor="@color/dymanic_neutral_10"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>